After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677644 - grecord: send eos before we stop record.
grecord: send eos before we stop record.
Status: RESOLVED FIXED
Product: gnome-media
Classification: Deprecated
Component: Gnome-Sound-Recorder
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome media maintainers
gnome media maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-07 17:59 UTC by Oleksij Rempel
Modified: 2012-06-08 05:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
grecord: send eos before we stop record. (1.82 KB, patch)
2012-06-07 17:59 UTC, Oleksij Rempel
committed Details | Review

Description Oleksij Rempel 2012-06-07 17:59:53 UTC
Current grecord produces files without EOS. This can be tested
with tool "ogginfo".

accodrding to this documentation:
http://gstreamer.freedesktop.org/data/doc/gstreamer/head/gstreamer-libs/html
"Controlled shutdown of live sources in applications"
"Since GStreamer 0.10.16 an application may send an EOS event to a source el

So this patch make sure we send EOS before we stop recording
Comment 1 Oleksij Rempel 2012-06-07 17:59:56 UTC
Created attachment 215861 [details] [review]
grecord: send eos before we stop record.

Current grecord produces files without EOS. This can be tested
with tool "ogginfo".

accodrding to this documentation:
http://gstreamer.freedesktop.org/data/doc/gstreamer/head/gstreamer-libs/html/GstBaseSrc.html
"Controlled shutdown of live sources in applications"
"Since GStreamer 0.10.16 an application may send an EOS event to a source element to make it perform the EOS logic".

So this patch make sure we send EOS before we stop recording.

Signed-off-by: Oleksij Rempel <bug-track@fisher-privat.net>
Comment 2 Marc-Andre Lureau 2012-06-07 23:13:17 UTC
Review of attachment 215861 [details] [review]:

ack
Comment 3 Oleksij Rempel 2012-06-08 05:52:56 UTC
Attachment 215861 [details] pushed as 99e7a41 - grecord: send eos before we stop record.