grecord/src/gsr-window.c
@@ -1279,8 +1279,14 @@ stop_cb (GtkAction *action,
 		GST_DEBUG ("Stopping play pipeline");
 		set_pipeline_state_to_null (priv->play->pipeline);
 	} else if (priv->record && priv->record->state == GST_STATE_PLAYING) {
+		GstMessage *msg;
+
 		GST_DEBUG ("Stopping recording source");
-		/* GstBaseSrc will automatically send an EOS when stopping */
+		gst_element_send_event (priv->record->src, gst_event_new_eos ());
+		/* wait one second for EOS message on the pipeline bus */
+		msg = gst_bus_timed_pop_filtered (GST_ELEMENT_BUS (priv->record->pipeline), GST_SECOND, GST_MESSAGE_EOS | GST_MESSAGE_ERROR);
+		gst_message_unref (msg);
+
 		gst_element_set_state (priv->record->src, GST_STATE_NULL);
 		gst_element_get_state (priv->record->src, NULL, NULL, -1);
 		gst_element_set_locked_state (priv->record->src, TRUE);
